modules/cli/src/test/resources/bad/safety/stuckmsg/twoparty/Test02.scr
module bad.safety.stuckmsg.twoparty.Test02;


global protocol Proto1(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		1() from A to B;
		2() from A to B;
	}
}

